infra/k3s/base/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploy
  namespace: task-manager-api
  labels:
    app: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: task-manager-api:dev
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
