infra/k3s/base/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: task-manager-api
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.1
          imagePullPolicy: IfNotPresent
          args: ["start-dev"]
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
