infra/k3s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: task-manager-api
  labels:
    service: api
spec:
  type: ClusterIP
  ports:
    - name: http
