infra/k3s/base/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-svc
  namespace: task-manager-api
  labels:
    service: keycloak
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
