infra/k3s/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db-headless
  namespace: task-manager-api
  labels:
    app: postgres
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: task-manager-api
  labels:
    app: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
